Add a validity control on private key related to SSL Certificate

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -70,6 +70,7 @@
   "updateCertificateFormDesc": "You can update or add an SSL certificate to your static site.\n\nYou can upload the file containing the public certificate for your domain and upload the corresponding private key to secure your site.",
   "updateCertificateRequiredInfo": "Required informations",
   "updateCertificateStepErrorSSLCertInvalid": "SSL Certificate is invalid.",
+  "updateCertificateStepErrorPrivateKeyInvalid": "The private key is invalid.",
   "updateCertificateStepErrorSSLCertKeyEmpty": "You must provide an SSL certificate and the private key.",
   "updateCertificatePublicCertPathLabel": "Public certificate file for the domain",
   "updateCertificatePrivateKeyCertLabel": "Private key file related to the certificate for the domain",
@@ -206,6 +207,7 @@
   "addWebsiteTooManyFiles": "Sorry, during the beta phase, publishing a static website larger than 3 MB is not allowed.",
   "addWebsiteStepErrorSSLCertInvalid": "SSL Certificate is invalid.",
   "addWebsiteStepErrorSSLCertKeyEmpty": "You must provide an SSL certificate and the private key.",
+  "addWebsiteStepErrorPrivateKeyInvalid": "The private key is invalid.",
   "addWebsiteStepErrorGetListFiles": "Unable to get the list of files.",
   "addWebsiteStepErrorFeesTimeout": "The static site hasn't deployed because you didn't validate the fees in time.",
   "addWebsiteStepErrorFeesUnvalidated": "The static site hasn't been deployed because the fees haven't been validated.",
