--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -65,6 +65,7 @@
   "menu_documentation": "Documentation",
   "menu_sourceCode": "Source code",
   "menu_faq": "FAQ",
+  "menu_tuto": "Tutorials",
   "menu_section_hosting": "Hosting",
   "menu_section_infos": "Informations",
   "updateCertificateFormTitle": "Add a new certificate",
