add report bug option

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -64,6 +64,7 @@
   "menu_documentation": "Documentation",
   "menu_sourceCode": "Source code",
   "menu_faq": "FAQ",
+  "menu_report_bug": "Report a bug",
   "menu_tuto": "Tutorials",
   "menu_section_hosting": "Hosting",
   "menu_section_infos": "Informations",
