--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -28,7 +28,7 @@
   "yes": "Yes",
   "no": "No",
   "ok": "Ok",
-  "certificateInfosTitle": "Certificate infos",
+  "certificateInfosTitle": "Certificate info",
   "certificateInfosNoCertInstalled": "No certificate installed",
   "certificateInfosSubjectTitle": "Issued to",
   "certificateInfosIssuerTitle": "Issued by",
