💄 Centered content in add website page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -234,5 +234,5 @@
   "archethicDashboardMenuWalletOnWayItem": "AEWallet",
   "archethicDashboardMenuWalletOnWayDesc": "Send, Receive and Exchange UCO and Tokens",
   "addWebsite": "Add a website",
-  "websitesListVersionsPopupBrowseFiles": "Browse files"
+  "websitesListVersionsPopupBVisitWebsite": "Visit the website"
 }
