💄 Add website responsive

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -102,28 +102,19 @@
   "addWebSiteFormOptionalInfo": "Optional informations",
   "addWebSiteDisclaimer": "Before doing so, please note that all the data of your static site will remain public in the Archethic blockchain.",
   "addWebSiteWaitingStep1": "Creating the static site in your keychain. Please confirm in your Archethic wallet to confirm the creation.",
-  "addWebSiteConfirmedStep1": "Static site created as a new service in your keychain.",
   "addWebSiteWaitingStep2": "Retrieving files in progress.",
-  "addWebSiteConfirmedStep2": "Files retrieved.",
   "addWebSiteWaitingStep3": "Creating transactions with the content of the static site files.",
-  "addWebSiteConfirmedStep3": "Transactions with the content of the static site files created.",
   "addWebSiteWaitingStep4": "Signing transactions in progress. Please confirm in your Archethic wallet to sign them.",
-  "addWebSiteConfirmedStep4": "Transactions with the content of the static site files signed.",
   "addWebSiteWaitingStep5": "Creating the reference transaction listing the static site files in progress.",
-  "addWebSiteConfirmedStep5": "Reference transaction created.",
   "addWebSiteWaitingStep6": "Signing the reference transaction in progress. Please confirm in your Archethic wallet to sign it.",
-  "addWebSiteConfirmedStep6": "Reference transaction signed.",
   "addWebSiteWaitingStep7": "Calculating fees to provision the transaction chains containing the static site.",
-  "addWebSiteConfirmedStep7": "Fees to provision the transaction chains containing the static site calculated.",
   "addWebSiteWaitingStep8": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress.",
-  "addWebSiteConfirmedStep8": "Funds transfer transaction to provision the transaction chains created.",
   "addWebSiteWaitingStep9": "Signing the funds transfer transaction in progress. Please confirm in your Archethic wallet to sign it.",
-  "addWebSiteConfirmedStep9": "Funds transfer transaction to provision the transaction chains signed.",
   "addWebSiteWaitingStep10": "Calculating overall fees in progress.",
   "addWebSiteConfirmedStep10": "Overall fees calculated: %1 UCO.",
   "addWebSiteConfirmStep11": "Do you confirm the creation of the static site?",
   "addWebSiteWaitingStep12": "Creating the static site on the Archethic blockchain in progress.",
-  "addWebSiteConfirmedStep12": "The static site has been successfully deployed!",
+  "addWebSiteWaitingStep13": "Creation succeeded",
   "addWebSiteDesc": "You can publish your static site from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your static site on the blockchain.",
   "unpublishWebSiteFormTitle": "Unpublish your static site",
   "unpublishWebSiteDesc": "You can unpublish your static site from this screen.\n\nBefore doing so, be aware that your static site data will remain public in the Archethic blockchain.\n\nOnly access to the site is disabled via the blanking of the reference transaction that contains the link to all the files of your static site.",
@@ -234,5 +225,6 @@
   "archethicDashboardMenuWalletOnWayItem": "AEWallet",
   "archethicDashboardMenuWalletOnWayDesc": "Send, Receive and Exchange UCO and Tokens",
   "addWebsite": "Add a website",
-  "websitesListVersionsPopupBVisitWebsite": "Visit the website"
+  "websitesListVersionsPopupBVisitWebsite": "Visit the website",
+  "addWebsiteProcessInterruptionWarning": "Are you sure you want to stop the website creation process?"
 }
