💄 Update certificate responsive

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -77,17 +77,11 @@
   "updateCertificatePublicCertPathLabel": "Public certificate file for the domain",
   "updateCertificatePrivateKeyCertLabel": "Private key file related to the certificate for the domain",
   "updateCertificateWaitingStep1": "Retrieving information from the blockchain in progress",
-  "updateCertificateConfirmedStep1": "Information retrieved from the blockchain",
   "updateCertificateWaitingStep2": "Creating the reference transaction listing the static site's files in progress",
-  "updateCertificateConfirmedStep2": "Reference transaction created",
   "updateCertificateWaitingStep3": "Signing the reference transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
-  "updateCertificateConfirmedStep3": "Reference transaction signed",
   "updateCertificateWaitingStep4": "Calculating fees to provision the transaction chains containing the static site in progress",
-  "updateCertificateConfirmedStep4": "Fees to provision the transaction chains containing the static site calculated",
   "updateCertificateWaitingStep5": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress",
-  "updateCertificateConfirmedStep5": "Funds transfer transaction to provision the transaction chains created",
   "updateCertificateWaitingStep6": "Signing the funds transfer transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
-  "updateCertificateConfirmedStep6": "Funds transfer transaction to provision the transaction chains signed",
   "updateCertificateConfirmedStep7": "Overall fees calculated: %1 UCO.",
   "updateCertificateWaitingStep7": "Calculating overall fees in progress",
   "updateCertificateConfirmStep8": "Do you confirm the certificate update?",
@@ -122,23 +116,14 @@
   "updateWebSiteDesc": "You can update your static site from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your static site on the blockchain.",
   "updateWebSiteDisclaimer": "Before doing so, please note that all the data of your static site will remain public in the Archethic blockchain.",
   "updateWebSiteWaitingStep1": "Retrieving information from the blockchain in progress",
-  "updateWebSiteConfirmedStep1": "Information retrieved from the blockchain",
   "updateWebSiteWaitingStep2": "Analyzing changes to apply in progress",
-  "updateWebSiteConfirmedStep2": "Analysis completed",
   "updateWebSiteWaitingStep3": "Creating transactions with the static site's file content in progress",
-  "updateWebSiteConfirmedStep3": "Transactions with the static site's file content created",
   "updateWebSiteWaitingStep4": "Signing transactions in progress.\nPlease confirm in your Archethic wallet to sign them.",
-  "updateWebSiteConfirmedStep4": "Transactions with the static site's file content signed",
   "updateWebSiteWaitingStep5": "Creating the reference transaction listing the static site's files in progress",
-  "updateWebSiteConfirmedStep5": "Reference transaction created",
   "updateWebSiteWaitingStep6": "Signing the reference transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
-  "updateWebSiteConfirmedStep6": "Reference transaction signed",
   "updateWebSiteWaitingStep7": "Calculating fees to provision the transaction chains containing the static site in progress",
-  "updateWebSiteConfirmedStep7": "Fees to provision the transaction chains containing the static site calculated",
   "updateWebSiteWaitingStep8": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress",
-  "updateWebSiteConfirmedStep8": "Funds transfer transaction to provision the transaction chains created",
   "updateWebSiteWaitingStep9": "Signing the funds transfer transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
-  "updateWebSiteConfirmedStep9": "Funds transfer transaction to provision the transaction chains signed",
   "updateWebSiteConfirmedStep10": "Overall fees calculated: %1 UCO.",
   "updateWebSiteWaitingStep10": "Calculating overall fees in progress",
   "updateWebSiteConfirmStep11": "Do you confirm the static site update?",
@@ -167,17 +152,11 @@
   "disclaimer": "Disclaimer",
   "informations": "Informations",
   "unpublishWebSiteWaitingStep1": "Information retrieved from the blockchain.",
-  "unpublishWebSiteConfirmedStep1": "Information retrieved from the blockchain",
   "unpublishWebSiteWaitingStep2": "Clearing the reference transaction listing the static site's files in progress",
-  "unpublishWebSiteConfirmedStep2": "Empty reference transaction created.",
   "unpublishWebSiteWaitingStep3": "Signing the reference transaction in progress. Please confirm in your Archethic wallet to sign it.",
-  "unpublishWebSiteConfirmedStep3": "Reference transaction signed.",
   "unpublishWebSiteWaitingStep4": "Calculating fees to provision the transaction chains containing the static site.",
-  "unpublishWebSiteConfirmedStep4": "Fees to provision the transaction chains containing the static site calculated.",
   "unpublishWebSiteWaitingStep5": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress.",
-  "unpublishWebSiteConfirmedStep5": "Funds transfer transaction to provision the transaction chains created.",
   "unpublishWebSiteWaitingStep6": "Signing the funds transfer transaction in progress. Please confirm in your Archethic wallet to sign it.",
-  "unpublishWebSiteConfirmedStep6": "Funds transfer transaction to provision the transaction chains signed.",
   "unpublishWebSiteWaitingStep7": "Calculating overall fees in progress.",
   "unpublishWebSiteConfirmedStep7": "Overall fees calculated: %1 UCO.",
   "unpublishWebSiteConfirmStep8": "Do you confirm the unpublish of the static site?",
@@ -227,5 +206,6 @@
   "addWebsite": "Add a website",
   "websitesListVersionsPopupBVisitWebsite": "Visit the website",
   "addWebsiteProcessInterruptionWarning": "Are you sure you want to stop the website creation process?",
-  "updateWebsiteProcessInterruptionWarning": "Are you sure you want to stop the website update process?"
+  "updateWebsiteProcessInterruptionWarning": "Are you sure you want to stop the website update process?",
+  "updateCertificateProcessInterruptionWarning": "Are you sure you want to stop the certificate update process?"
 }
