🐛 Small UI fixes

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -78,10 +78,10 @@
   "updateCertificatePrivateKeyCertLabel": "Private key file related to the certificate for the domain",
   "updateCertificateWaitingStep1": "Retrieving information from the blockchain in progress",
   "updateCertificateWaitingStep2": "Creating the reference transaction listing the static site's files in progress",
-  "updateCertificateWaitingStep3": "Signing the reference transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateCertificateWaitingStep3": "Signing the reference transaction in progress.",
   "updateCertificateWaitingStep4": "Calculating fees to provision the transaction chains containing the static site in progress",
   "updateCertificateWaitingStep5": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress",
-  "updateCertificateWaitingStep6": "Signing the funds transfer transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateCertificateWaitingStep6": "Signing the funds transfer transaction in progress.",
   "updateCertificateConfirmedStep7": "Overall fees calculated: %1 UCO.",
   "updateCertificateWaitingStep7": "Calculating overall fees in progress",
   "updateCertificateConfirmStep8": "Do you confirm the certificate update?",
@@ -95,20 +95,21 @@
   "addWebSiteFormRequiredInfo": "Required informations",
   "addWebSiteFormOptionalInfo": "Optional informations",
   "addWebSiteDisclaimer": "Before doing so, please note that all the data of your static site will remain public in the Archethic blockchain.",
-  "addWebSiteWaitingStep1": "Creating the static site in your keychain. Please confirm in your Archethic wallet to confirm the creation.",
+  "addWebSiteWaitingStep1": "Creating the static site in your keychain.",
   "addWebSiteWaitingStep2": "Retrieving files in progress.",
   "addWebSiteWaitingStep3": "Creating transactions with the content of the static site files.",
-  "addWebSiteWaitingStep4": "Signing transactions in progress. Please confirm in your Archethic wallet to sign them.",
+  "addWebSiteWaitingStep4": "Signing transactions in progress.",
   "addWebSiteWaitingStep5": "Creating the reference transaction listing the static site files in progress.",
-  "addWebSiteWaitingStep6": "Signing the reference transaction in progress. Please confirm in your Archethic wallet to sign it.",
+  "addWebSiteWaitingStep6": "Signing the reference transaction in progress.",
   "addWebSiteWaitingStep7": "Calculating fees to provision the transaction chains containing the static site.",
   "addWebSiteWaitingStep8": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress.",
-  "addWebSiteWaitingStep9": "Signing the funds transfer transaction in progress. Please confirm in your Archethic wallet to sign it.",
+  "addWebSiteWaitingStep9": "Signing the funds transfer transaction in progress.",
   "addWebSiteWaitingStep10": "Calculating overall fees in progress.",
   "addWebSiteConfirmedStep10": "Overall fees calculated: %1 UCO.",
   "addWebSiteConfirmStep11": "Do you confirm the creation of the static site?",
   "addWebSiteWaitingStep12": "Creating the static site on the Archethic blockchain in progress.",
   "addWebSiteWaitingStep13": "Creation succeeded",
+  "pleaseConfirmWallet": "Please confirm a transaction in your Archethic wallet",
   "addWebSiteDesc": "You can publish your static site from this screen.\n\nDuring the deployment process, you will be asked to sign transactions in your wallet. These actions don't require fees.\n\nThe deployment fee will be communicated to you just before you confirm the deployment of your static site on the blockchain.",
   "unpublishWebSiteFormTitle": "Unpublish your static site",
   "unpublishWebSiteDesc": "You can unpublish your static site from this screen.\n\nBefore doing so, be aware that your static site data will remain public in the Archethic blockchain.\n\nOnly access to the site is disabled via the blanking of the reference transaction that contains the link to all the files of your static site.",
@@ -118,12 +119,12 @@
   "updateWebSiteWaitingStep1": "Retrieving information from the blockchain in progress",
   "updateWebSiteWaitingStep2": "Analyzing changes to apply in progress",
   "updateWebSiteWaitingStep3": "Creating transactions with the static site's file content in progress",
-  "updateWebSiteWaitingStep4": "Signing transactions in progress.\nPlease confirm in your Archethic wallet to sign them.",
+  "updateWebSiteWaitingStep4": "Signing transactions in progress.",
   "updateWebSiteWaitingStep5": "Creating the reference transaction listing the static site's files in progress",
-  "updateWebSiteWaitingStep6": "Signing the reference transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateWebSiteWaitingStep6": "Signing the reference transaction in progress.",
   "updateWebSiteWaitingStep7": "Calculating fees to provision the transaction chains containing the static site in progress",
   "updateWebSiteWaitingStep8": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress",
-  "updateWebSiteWaitingStep9": "Signing the funds transfer transaction in progress.\nPlease confirm in your Archethic wallet to sign it.",
+  "updateWebSiteWaitingStep9": "Signing the funds transfer transaction in progress.",
   "updateWebSiteConfirmedStep10": "Overall fees calculated: %1 UCO.",
   "updateWebSiteWaitingStep10": "Calculating overall fees in progress",
   "updateWebSiteConfirmStep11": "Do you confirm the static site update?",
@@ -153,10 +154,10 @@
   "informations": "Informations",
   "unpublishWebSiteWaitingStep1": "Information retrieved from the blockchain.",
   "unpublishWebSiteWaitingStep2": "Clearing the reference transaction listing the static site's files in progress",
-  "unpublishWebSiteWaitingStep3": "Signing the reference transaction in progress. Please confirm in your Archethic wallet to sign it.",
+  "unpublishWebSiteWaitingStep3": "Signing the reference transaction in progress.",
   "unpublishWebSiteWaitingStep4": "Calculating fees to provision the transaction chains containing the static site.",
   "unpublishWebSiteWaitingStep5": "Creating the funds transfer transaction to provision the transaction chains containing the static site in progress.",
-  "unpublishWebSiteWaitingStep6": "Signing the funds transfer transaction in progress. Please confirm in your Archethic wallet to sign it.",
+  "unpublishWebSiteWaitingStep6": "Signing the funds transfer transaction in progress.",
   "unpublishWebSiteWaitingStep7": "Calculating overall fees in progress.",
   "unpublishWebSiteConfirmedStep7": "Overall fees calculated: %1 UCO.",
   "unpublishWebSiteConfirmStep8": "Do you confirm the unpublish of the static site?",
