--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -202,8 +202,8 @@
   "archethicDashboardMenuBridgeDesc": "The portal allowing seamless assets deposits & withdrawals",
   "archethicDashboardMenuDEXItem": "DEX",
   "archethicDashboardMenuDEXDesc": "SWAP assets on-chain, add liquidity & access LP staking",
-  "archethicDashboardMenuWalletOnWayItem": "AEWallet",
-  "archethicDashboardMenuWalletOnWayDesc": "Send, Receive and Exchange UCO and Tokens",
+  "archethicDashboardMenuWalletOnWayItem": "Archethic Wallet",
+  "archethicDashboardMenuWalletOnWayDesc": "Securely store, transfer and swap tokens and collectibles",
   "addWebsite": "Add a website",
   "websitesListVersionsPopupBVisitWebsite": "Visit the website",
   "addWebsiteProcessInterruptionWarning": "Are you sure you want to stop the website creation process?",
